--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ ul {
 
 ul li a{
   display: block;
-  color: white;
+  color: red;
   font-family: cursive;
   font-weight: 900;
   margin-right: 30px;
